// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert Component > renders the default variant 1`] = `
"<div class="relative w-full rounded border border-solid border-gray-300 p-3 [&>svg]:text-gray-950 flex text-left text-gray-800" role="alert">
  <div class="flex-shrink-0 mt-0.5 mr-3"><i class="text-gray-500 pi pi-info-circle"></i></div>
  <div class="flex flex-column">
    <!---->
    <!---->
  </div>
</div>"
`;

exports[`Alert Component > renders the error variant 1`] = `
"<div class="relative w-full rounded border border-solid p-3 flex text-left bg-red-50 border-red-500/50 text-red-500 [&>svg]:text-red-500" role="alert">
  <div class="flex-shrink-0 mt-0.5 mr-3"><i class="pi pi-exclamation-circle"></i></div>
  <div class="flex flex-column">
    <!---->
    <!---->
  </div>
</div>"
`;
